<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/minus" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/v_back"
            app:title="Panduan"
            app:titleTextColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/v_give"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/minus" />
            <Button
                android:id="@+id/btn_pengertian"
                android:background="@drawable/button_background"
                android:text="@string/pengertian_zakat"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_dalil"
                android:background="@drawable/button_background"
                android:text="@string/dalil_zakat"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_macam"
                android:background="@drawable/button_background"
                android:text="@string/macam_macam_zakat"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
