<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/minus" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/v_back"
            app:title="@string/pengertian_zakat"
            app:titleTextColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:src="@drawable/v_give"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="40dp"
                    android:contentDescription="@string/minus" />
                <TextView
                    android:textAlignment="center"
                    android:text="@string/zakat_adalah"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
    </LinearLayout>
</FrameLayout>
